Context changed to cybiks.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/cybiks
 timezone-mapper.AAA=Pacific/Tahiti
 timezone-mapper.AAB=Australia/Brisbane
 timezone-mapper.AAC=Africa/Cairo
